# bazel101

./: BUILD  BUILD.bazel  README.md  WORKSPACE  bazel-bazel101  bazel-bin  bazel-out  bazel-testlogs  go.mod
files/: BUILD  files.bzl
src/: BUILD.bazel  simple.go
src/b/: BUILD.bazel  b.go  b_test.go
src/c/: BUILD.bazel  c.go  c_test.go
