load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jasonmkurtz/hellohttp
gazelle(name = "gazelle")

go_library(
    name = "simple",
    srcs = [
        "simple.go",
    ],
    importpath = "github.com/jasonmkurtz/bazel101",
    deps = [
    ],
)

go_binary(
    name = "simple-bazel",
    deps = [":simple"],
)
