load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jasonmkurtz/bazel101
gazelle(name = "gazelle")

go_library(
    name = "simple",
    srcs = ["simple.go"],
    importpath = "github.com/jasonmkurtz/bazel101",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_jasonmkurtz_bazel101//src/b:go_default_library",
    ],
)

go_binary(
    name = "simple-bazel",
    embed = [":simple"],
    visibility = ["//visibility:public"],
)
