load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jasonmkurtz/bazel101
gazelle(name = "gazelle")

go_library(
    name = "bazel101_lib",
    srcs = ["simple.go"],
    importpath = "github.com/jasonmkurtz/bazel101",
    visibility = ["//visibility:private"],
    deps = [
        "//src/b",
        "//src/c",
    ],
)

go_binary(
    name = "simple",
    embed = [":bazel101_lib"],
    visibility = ["//visibility:public"],
)
